--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <title>Quiropedistas Tamanaco C.A.</title>
 </head>
 <body>
-    
+   <h1>Quiropedistas Tamanaco C.A.</h1>
+   <p>Expertos en cuidar la salud de tus pies desde 1975.</p> 
+   <hr>
+   <p>Viendo hr, <span style = "color:aqua">probando la etiqueta de span</span> <br> y probando la etiqueta br de salto de linea</p>
+   <p>Ir a instagram usando etiqueta a: <a href = "https://www.instagram.com/quiropedistastamanacooficial/">Visitar Instagram</a></p>
+   <!--Como esta arriba, se va a recargar la pagina actual. Si queremos que se cargue una nueva ventana para el usuario, seria asi:-->
+   <a target = "_blank" href = "https://www.instagram.com/quiropedistastamanacooficial/">Visitar instagram desde otra pestana</a>
+   <p>Vamos a agregar una imagen:</p>
+   <img src = "QTlogo.png"/>
 </body>
 </html>
